--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "file-loader": "^1.1.6",
     "gh-pages": "^1.1.0",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "webpack": "^3.11.0",
