--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build NODE_ENV=production",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -29,7 +29,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "postcss-load-config": "^1.2.0",
+    "postcss-loader": "^1.3.3",
     "file-loader": "^1.1.6",
     "gh-pages": "^1.1.0",
     "html-loader": "^0.5.5",
