--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build NODE_ENV=production",
+    "compile": "webpack",
+    "predeploy": "npm run compile",
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
@@ -29,13 +30,13 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
-    "postcss-load-config": "^1.2.0",
-    "postcss-loader": "^1.3.3",
     "file-loader": "^1.1.6",
     "gh-pages": "^1.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
+    "postcss-load-config": "^1.2.0",
+    "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.6",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
