--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "stylus-loader": "^3.0.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --open",
-    "build": "react-scripts build",
+    "startold": "webpack-dev-server --open",
+    "buildold": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "compile": "webpack",
-    "predeploy": "npm run compile",
-    "deploy": "gh-pages -d dist"
+    "start": "webpack-dev-server --devtool eval-source-map --history-api-fallback --open",
+    "build": "webpack -p",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -30,13 +32,13 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
+    "postcss-load-config": "^1.2.0",
+    "postcss-loader": "^1.3.3",
     "file-loader": "^1.1.6",
     "gh-pages": "^1.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
-    "postcss-load-config": "^1.2.0",
-    "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.6",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
